--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,10 @@
 {
   "type": "module",
   "dependencies": {
+    "axios": "^1.7.4",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2"
   }
 }
