--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
+    "@shadcn/ui": "^0.0.4",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.4",
     "postcss": "^8.4.41",
